# acorn-nfs

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DISASSEMBLY.md  GLOSSARY.md  HANDOFF.md  README.md  README.md.j2  acornaeology.json  fantasm.toml  fix_335k_comments.py  generate_335d.py  generate_335k.py  generate_340.py  generate_360.py  generate_365.py  generate_418.py  generate_421_variant_1.py  generate_readme.py  investigate_360.py  pyproject.toml  resolve_unmapped_340.py  resolve_unmapped_360.py
.github/workflows/: verify.yml
docs/: sideways-rom-reference.md
docs/analysis/: anfs-421-variant-naming.md  authors-easter-egg.md
docs/ecsysug/: Image003.tif  Image004.tif  Image005.tif  Image006.tif  Image007.tif  Image008.tif  Image009.tif  Image010.tif  Image011.tif  Image012.tif  Image013.tif  Image014.tif  Image015.tif  Image016.tif  Image017.tif  Image018.tif  Image019.tif  Image020.tif  Image021.tif  Image022.tif  Image023.tif  Image024.tif  Image025.tif  Image026.tif  Image027.tif  Image028.tif  Image029.tif  Image030.tif  Image031.tif  Image032.tif  Image033.tif  Image034.tif  Image035.tif  Image036.tif  Image037.tif  Image038.tif  Image039.tif  Image040.tif  Image041.tif  Image042.tif  (+87 more)
docs/techniques/: 00-seed-and-extend.md  01-opcode-fingerprinting.md  02-jsr-following.md  03-string-anchoring.md  04-dispatch-table-decoding.md  README.md
src/acorn_nfs/: cli.py  verify.py
src/disasm_tools/: asm_extract.py  audit.py  backfill.py  blockmatch.py  cfg.py  cli.py  comment_check.py  compare.py  context.py  fingerprint.py  insert_point.py  labels.py  lint.py  mos6502.py  paths.py  rename_labels.py  verify.py
tools/: build_mnemonic_review.py  check_md_links_in_code.py  compare_334b_vs_334.py  compare_annotations.py  compare_label_consistency.py  find_label_addresses.py  find_stale_comments.py  fix_stale_comments.py
tools/snapshots/: addr_map_4.18_to_4.21_variant_1_post_issue10.tsv  find_suspect_comments.py
versions/3.34/: disassemble.py
versions/3.34B/: CHANGES-FROM-3.34.md
versions/3.35D/: CHANGES-FROM-3.34B.md
versions/3.35K/: CHANGES-FROM-3.35D.md
(+119 files in other folders)
