[project]
name = "acorn-nfs"
version = "0.1.0"
description = "Annotated disassemblies of Acorn NFS ROMs"
license = "MIT"
authors = [
    { name = "Robert Smallshire" },
]
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.0",
    "py8dis @ git+https://github.com/acornaeology/py8dis.git",
]

[dependency-groups]
dev = [
    "pre-commit>=3.0",
]

[tool.uv]
index-url = "https://pypi.org/simple"

[project.scripts]
acorn-nfs-disasm-tool = "disasm_tools.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/disasm_tools"]
