[project]
name = "acorn-nfs"
version = "0.1.0"
description = "Annotated disassemblies of Acorn NFS ROMs"
license = "MIT"
authors = [
    { name = "Robert Smallshire" },
]
requires-python = ">=3.12"
dependencies = [
    "fantasm>=0.9.0",
    "dasmos>=1.0",
]

[dependency-groups]
dev = [
    "pre-commit>=3.0",
]

[tool.uv]
index-url = "https://pypi.org/simple"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
# This repo is annotated-disassembly content, not a published library.
only-include = ["versions"]
